fix: sonar code smells